%% Class diagram — Students, guardians, per-route pickup assignments
%% StudentController, StudentBusAssignmentController

classDiagram
  direction TB

  namespace People {
    class User {
      +Id RoleId Status
    }
    class Student {
      +Id FullName GuardianId CampusId Status
    }
    class Campus {
      +Id Name
    }
  }

  namespace Routing {
    class BusRoute {
      +Id Name CampusId
    }
    class BusStation {
      +Id Name Address
    }
  }

  namespace Assignments {
    class StudentBusAssignment {
      +Id StudentId RouteId RideDate
      +PickupStationId DropOffStationId Note
    }
  }

  User "1" --> "*" Student : Guardian
  Campus "1" --> "*" Student
  Student "1" --> "*" StudentBusAssignment
  BusRoute "1" --> "*" StudentBusAssignment
  BusStation "1" --> "*" StudentBusAssignment : pickup
  BusStation "1" --> "*" StudentBusAssignment : dropoff
